@@ -1,6 +1,12 @@
+2009-08-09 09:42  rsbivand
+
+	* R/gdal.R, src/gdal-bindings.cpp: altered CPL default to use
+	  REprintf
+
 2009-08-08 20:48  rsbivand
 
-	* src/gdal-bindings.cpp: altered CPL default to use REprintf
+	* src/gdal-bindings.cpp, ChangeLog, inst/ChangeLog: altered CPL
+	  default to use REprintf
 
 2009-08-08 17:16  rsbivand
 
